--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,10 +24,10 @@
     "gsap": "^3.13.0",
     "lucide-react": "^0.554.0",
     "motion": "^12.23.25",
-    "next": "15.3.3",
+    "next": "^16.1.1",
     "ogl": "^1.0.11",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
